WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144584
REGRESSION (
r178156
): CSS Parser incorrectly rejects valid calc() in padding-right property
https://bugs.webkit.org/show_bug.cgi?id=144584
Summary
REGRESSION (r178156): CSS Parser incorrectly rejects valid calc() in padding-...
Chris Dumez
Reported
2015-05-04 10:09:32 PDT
After <
http://trac.webkit.org/changeset/178156
>, the CSS Parser sometimes rejects valid CSS calculations for CSS properties whose value cannot be negative (e.g. padding-right) because it thinks the calculation is negative. Radar: <
rdar://problem/20796829
>
Attachments
Patch
(11.56 KB, patch)
2015-05-04 12:07 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(12.35 KB, patch)
2015-05-04 13:14 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-05-04 12:07:14 PDT
Created
attachment 252322
[details]
Patch
Darin Adler
Comment 2
2015-05-04 12:51:38 PDT
Comment on
attachment 252322
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=252322&action=review
> Source/WebCore/css/CSSParser.cpp:-1678 > - if (isValid && mustBeNonNegative && calculation->isNegative())
Are there any call sites calling CSSCalcValue::isNegative after this change? If so, what for?
Chris Dumez
Comment 3
2015-05-04 13:13:28 PDT
(In reply to
comment #2
)
> Comment on
attachment 252322
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=252322&action=review
> > > Source/WebCore/css/CSSParser.cpp:-1678 > > - if (isValid && mustBeNonNegative && calculation->isNegative()) > > Are there any call sites calling CSSCalcValue::isNegative after this change? > If so, what for?
No, it is no longer used. I will drop the method.
Chris Dumez
Comment 4
2015-05-04 13:14:25 PDT
Created
attachment 252328
[details]
Patch
WebKit Commit Bot
Comment 5
2015-05-04 13:29:10 PDT
Comment on
attachment 252328
[details]
Patch Clearing flags on attachment: 252328 Committed
r183765
: <
http://trac.webkit.org/changeset/183765
>
WebKit Commit Bot
Comment 6
2015-05-04 13:29:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug